
res_ari_channels
------------------
 * The ARI /channels resource now supports a new operation, 'redirect'. The
   redirect operation will perform a technology and state specific redirection
   on the channel to a specified endpoint or destination. In the case of SIP
   technologies, this is either a 302 Redirect response to an on-going INVITE
   dialog or a SIP REFER request.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.1.0 to Asterisk 13.2.0 ------------
------------------------------------------------------------------------------

res_pjsip_outbound_registration
------------------
 * The 'pjsip send unregister' command now stops further registrations.

 * A new command 'pjsip send register' has been added which allows you to
   start or restart periodic registration.  It can be used after a
   'send unregister' or after a 401 permanent error.

chan_pjsip
------------------
 * New 'user_eq_phone' endpoint setting. This adds a 'user=phone' parameter
   to the request URI and From URI if the user is determined to be a phone number.

 * New global setting 'keep_alive_interval'. Setting this to a non-zero value
   will cause keep alive messages to be sent periodically over connection
   oriented transports.

 * New 'PJSIP_AOR' and 'PJSIP_CONTACT' dialplan functions have been added which
   allow examining PJSIP AORs or contacts from the dialplan.

res_pjsip_config_wizard
------------------
 * This is a new module that adds streamlined configuration capability for
   chan_pjsip.  It's targetted at users who have lots of basic configuration
   scenarios like 'phone' or 'agent' or 'trunk'.  Additional information
   can be found in the sample configuration file at
   config/samples/pjsip_wizard.conf.sample.

res_fax
-----------
 * The T.38 negotiation timeout was previously hard coded at 5000 milliseconds
   and is now configurable via the 't38timeout' configuration option in